--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ img {
   object-fit: cover;
   display: block;
 }
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
