--- a/preguntas.css
+++ b/preguntas.css
@@ -13,20 +13,20 @@
   display: flex;
   align-items: center;
   width: 600px;
-  height: 420px;
+  height: 400px;
   background: linear-gradient(350deg, rgb(6, 61, 157), rgb(168, 13, 90));
-  overflow-x: scroll;
+  overflow: hidden;
 }
 
-.slider {
+#slider {
   display: flex;
-  border: 2px solid rgb(101, 30, 148);
   color: white;
   justify-content: center;
   align-items: center;
+  transition: all 500ms;
 }
 
-.slider > div {
+#slider > div {
   width: 600px;
   height: 400px;
   border: 1px solid black;
@@ -44,7 +44,7 @@
   border: 0px;
 }
 
-#flecha1 {
+#flecha_back {
   transform: scalex(-1);
 }
 
@@ -82,8 +82,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  gap: 1.5rem;
-  top: 30px;
+  gap: 1rem;
+  padding-top: 10px;
+  text-align: center;
+  padding: 30px;
+  font-size: 1rem;
 }
 
 #pregunta4 {
