--- a/preguntas.css
+++ b/preguntas.css
@@ -38,6 +38,10 @@
   justify-content: space-between;
 }
 
+.botones_container > img:hover {
+  cursor: pointer;
+}
+
 .botones_container > img {
   width: 150px;
   height: 70px;
