--- a/base.css
+++ b/base.css
@@ -3,3 +3,10 @@
   position: relative;
   box-sizing: border-box;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
