--- a/preguntas.css
+++ b/preguntas.css
@@ -32,6 +32,20 @@
   border: 1px solid black;
 }
 
+.send_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.send_container > input {
+  font-size: 1.3rem;
+  width: 100px;
+  height: 60px;
+  border-radius: 10%;
+  border: none;
+}
+
 .botones_container {
   display: flex;
   width: 50%;
